# School-42

./: CMakeLists.txt  Follow me!  README.md  main  test.c
BSQ/ex00/: Makefile  cool_map.txt
C-00/: README.md
C-00/ex00/: README.md  ft_putchar.c
C-00/ex01/: README.md  ft_print_alphabet.c
C-00/ex02/: README.md  ft_print_reverse_alphabet.c
C-00/ex03/: README.md  ft_print_numbers.c
C-00/ex04/: README.md  ft_is_negative.c
C-00/ex05/: README.md  ft_print_comb.c
C-00/ex06/: README.md  ft_print_comb2.c
C-00/ex07/: README.md  ft_putnbr.c
C-00/ex08/: ft_print_combn.c
C-01/: README.md
C-01/ex00/: README.md
C-01/ex01/: ft_ultimate.c
C-01/ex02/: ft_swap.c
C-01/ex03/: ft_div_mod.c
C-01/ex04/: ft_ultimate_div_mod.c
C-01/ex05/: ft_putstr.c
C-01/ex06/: ft_strlen.c
C-01/ex07/: ft_rev_int_tab.c
C-01/ex08/: ft_sort_int_tab.c
C-02/: README.md
C-02/ex00/: a.out  ft_strcpy.c
C-02/ex01/: ft_strncpy.c
C-02/ex02/: a.out  ft_str_is_alpha.c
C-02/ex03/: ft_str_is_numeric.c
C-02/ex04/: ft_str_is_lowercase.c
C-02/ex05/: ft_str_is_uppercase.c
C-02/ex06/: a.out  ft_str_is_printable.c
C-02/ex07/: ft_strupcase.c
C-02/ex08/: ft_strlowcase.c
C-02/ex09/: ft_strcapitalize.c
C-02/ex10/: ft_strlcpy.c
C-02/ex11/: ft_putstr_non_printable.c
C-02/ex12/: ft_print_memory.c
C-03/: README.md
C-03/ex00/: README.md  ft_strcmp.c
C-03/ex01/: ft_strncmp.c
C-03/ex02/: ft_strcat.c
C-03/ex03/: ft_strncat.c
C-03/ex04/: ft_strstr.c
C-03/ex05/: ft_strlcat.c
C-04/: README.md
C-04/ex00/: ft_strlen.c
C-04/ex01/: ft_putstr.c
C-04/ex02/: README.md  ft_putnbr.c
C-04/ex04/: ft_putnbr_base.c
C-05/: README.md
C-05/ex00/: ft_iterative_factorial.c
C-05/ex04/: ft_fibonacci.c
C-05/ex05/: ft_sqrt.c
C-05/ex06/: ft_is_prime.c
C-05/ex07/: ft_find_next_prime.c
C-05/ex08/: ft_ten_queens_puzzle.c
C-06/: README.md
C-06/ex00/: ft_print_program_name.c
C-06/ex01/: ft_print_params.c
C-07/: README.md
C-07/ex00/: ft_strdup.c
C-07/ex01/: ft_range.c
C-07/ex02/: ft_ultimate_range.c
C-07/ex03/: ft_strjoin.c
C-08/: README.md
C-08/ex01/: ft_boolean.h
C-08/ex02/: ft_abs.h
C-08/ex03/: ft_point.h
C-08/ex04/: ft_stock_str.h  ft_strs_to_tab.c
C-09/ex00/: ft_strlen.c
C-09/ex02/: a.out  ft_split.c
C-10/ex00/: Makefile  ft_display_file
C-10/ex01/: Makefile  ft_cat
C-10/ex02/: Makefile  ft_tail
C-11/ex00/: ft_foreach.c
C-11/ex01/: ft_map.c
C-11/ex02/: ft_any.c
C-11/ex03/: ft_count_if.c
C-11/ex04/: ft_is_sort.c
C-11/ex06/: ft_sort_string_tab.c
C-11/ex07/: ft_advanced_sort_string_tab.c
Core/Cub3D/: main.c
Core/FdF/: Makefile
Core/Fractol/: Makefile  README.md
Core/GetNextLine/: README.md  author  example.txt  export.sh  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_utils.c  main.c  test.sh
Core/LibFT/: Makefile  README.md  author  export.sh  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_ceil.c  ft_cos.c  ft_factorial.c  ft_floor.c  ft_hashclear.c  ft_hashcode.c  ft_hashdel.c  ft_hashinsert.c  ft_hashnew.c  ft_hashsearch.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_back_bonus.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstclear_bonus.c  ft_lstdelone.c  ft_lstdelone_bonus.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstmap_bonus.c  ft_lstnew.c  ft_lstsize.c  ft_lstsize_bonus.c  ft_max.c  (+57 more)
Core/MiniRT/: Makefile  errors.txt  main.c  run_gpu.sh
Core/MiniShell/: Makefile  README.md  minishell  problems.txt  readline.supp  suppressedval.sh  valgrinding.sh
Core/MiniTalk/: Makefile  README.md
Core/NetPractice/: level1.json  level10.json  level2.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json  level9.json  study.txt
Core/Pipex/: Makefile  README.md  pipex
Core/PrintF/: Makefile  ft_num_base.c  ft_print_char.c  ft_print_hex.c  ft_print_nbr.c  ft_print_num.c  ft_print_num_base.c  ft_print_num_unsigned.c  ft_print_ptr.c  ft_print_str.c  ft_print_unbr.c  ft_printf.c  ft_printf.h  main.c
Core/PushSwap/: Makefile
Core/SoLong/: Makefile  error.ber  map.ber  run.sh  test.ber
Custom/GGCollect/: Makefile
Custom/Test/: Makefile
Piscine-Reloaded/ex03/: find_sh.sh
Piscine-Reloaded/ex08/: ft_is_negative.c
Piscine-Reloaded/ex11/: ft_div_mod.c
Piscine-Reloaded/ex12/: ft_iterative_factorial.c
Piscine-Reloaded/ex13/: ft_recursive_factorial.c
Piscine-Reloaded/ex15/: ft_putstr.c
Piscine-Reloaded/ex16/: ft_strlen.c
Piscine-Reloaded/ex17/: ft_strcmp.c
Piscine-Reloaded/ex18/: ft_print_params.c
Piscine-Reloaded/ex19/: ft_sort_params.c
Piscine-Reloaded/ex21/: ft_range.c
Piscine-Reloaded/ex22/: ft_abs.h
Piscine-Reloaded/ex23/: ft_point.h
Piscine-Reloaded/ex25/: ft_foreach.c
Piscine-Reloaded/ex26/: ft_count_if.c
Piscine-Reloaded/ex27/: Makefile  main.c
Piscine/C-00/: README.md
Piscine/C-01/: README.md
Piscine/C-02/: README.md
Piscine/C-03/: README.md
Piscine/C-04/: README.md
Piscine/C-05/: README.md
Piscine/C-07/: README.md
Piscine/C-09/: README.md
Piscine/C-10/: README.md
Piscine/C-11/: README.md
Piscine/Shell-01/: README.md
Rush-00/: README
Rush-00/Subject-0/: main.c  rush0X.c
Rush-00/Subject-1/: main.c  rush0X.c
Rush-00/Subject-2/: main.c  rush02.c  rush0X.c
Rush-00/Subject-3/: rush0X.c
Rush-00/Subject-4/: rush0X.c
Rush-01/ex00/: rush-01.c  str_tools.c
Rush-02/: Makefile  numbers_jp.dict  rush-02
Rush-02/ex00/: numbers_meow.dict  rush-02
Rush-02/includes/: ft_array.h  ft_boolean.h  ft_convert.h  ft_dictionary.h  ft_file.h  ft_io.h  ft_num.h  ft_string_utils.h  rush.h
Rush-02/srcs/: ft_array.c  ft_atoi.c  ft_atoi_strict.c  ft_dictionary.c  ft_dictionary_io.c  ft_dictionary_sort.c  ft_file.c  ft_io.c  ft_itow.c  ft_putchar.c  ft_putstr.c  ft_string_utils.c  ft_string_utils_check.c  ft_string_utils_extra.c  handle_error.c  main.c
Shell-00/: README.md
Shell-00/ex02/: exo2.tar
Shell-00/ex07/: b
Shell-01/: README.md
Shell-01/ex07/: r_dwssap.sh
Shell-01/ex08/: add_chelou.sh
kekko/: README.md
(+1183 files in other folders)
