cmake_minimum_required(VERSION 3.13)  # CMake version check
project(school_42)                    # Create project "simple_example"
set(CMAKE_CXX_STANDARD 14)            # Enable c++14 standard

# Add executable target with source files listed in SOURCE_FILES variable

add_library(LibFT
		"Core/LibFT/src/base/ft_atoi.c"
		"Core/LibFT/src/base/ft_bzero.c"
		"Core/LibFT/src/base/ft_calloc.c"
		"Core/LibFT/src/base/ft_isalpha.c"
		"Core/LibFT/src/base/ft_isalnum.c"
		"Core/LibFT/src/base/ft_isascii.c"
		"Core/LibFT/src/base/ft_isdigit.c"
		"Core/LibFT/src/base/ft_isprint.c"
		"Core/LibFT/src/base/ft_itoa.c"
		"Core/LibFT/src/base/ft_memchr.c"
		"Core/LibFT/src/base/ft_memcmp.c"
		"Core/LibFT/src/base/ft_memcpy.c"
		"Core/LibFT/src/base/ft_memmove.c"
		"Core/LibFT/src/base/ft_memset.c"
		"Core/LibFT/src/base/ft_putchar_fd.c"
		"Core/LibFT/src/base/ft_putstr_fd.c"
		"Core/LibFT/src/base/ft_putnbr_fd.c"
		"Core/LibFT/src/base/ft_putendl_fd.c"
		"Core/LibFT/src/base/ft_split.c"
		"Core/LibFT/src/base/ft_strchr.c"
		"Core/LibFT/src/base/ft_strdup.c"
		"Core/LibFT/src/base/ft_striteri.c"
		"Core/LibFT/src/base/ft_strjoin.c"
		"Core/LibFT/src/base/ft_strlcat.c"
		"Core/LibFT/src/base/ft_strlcpy.c"
		"Core/LibFT/src/base/ft_strlen.c"
		"Core/LibFT/src/base/ft_strmapi.c"
		"Core/LibFT/src/base/ft_strncmp.c"
		"Core/LibFT/src/base/ft_strnstr.c"
		"Core/LibFT/src/base/ft_strrchr.c"
		"Core/LibFT/src/base/ft_strtrim.c"
		"Core/LibFT/src/base/ft_substr.c"
		"Core/LibFT/src/base/ft_tolower.c"
		"Core/LibFT/src/base/ft_toupper.c"
		"Core/LibFT/src/bonus/ft_lstadd_back_bonus.c"
		"Core/LibFT/src/bonus/ft_lstadd_front_bonus.c"
		"Core/LibFT/src/bonus/ft_lstclear_bonus.c"
		"Core/LibFT/src/bonus/ft_lstdelone_bonus.c"
		"Core/LibFT/src/bonus/ft_lstiter_bonus.c"
		"Core/LibFT/src/bonus/ft_lstlast_bonus.c"
		"Core/LibFT/src/bonus/ft_lstmap_bonus.c"
		"Core/LibFT/src/bonus/ft_lstnew_bonus.c"
		"Core/LibFT/src/bonus/ft_lstsize_bonus.c"
		"Core/LibFT/src/custom/ft_ceil.c"
		"Core/LibFT/src/custom/ft_factorial.c"
		"Core/LibFT/src/custom/ft_floor.c"
		"Core/LibFT/src/custom/ft_hashclear.c"
		"Core/LibFT/src/custom/ft_hashcode.c"
		"Core/LibFT/src/custom/ft_hashdel.c"
		"Core/LibFT/src/custom/ft_hashinsert.c"
		"Core/LibFT/src/custom/ft_hashnew.c"
		"Core/LibFT/src/custom/ft_hashsearch.c"
		"Core/LibFT/src/custom/ft_isblank.c"
		"Core/LibFT/src/custom/ft_isspace.c"
		"Core/LibFT/src/custom/ft_max.c"
		"Core/LibFT/src/custom/ft_memccpy.c"
		"Core/LibFT/src/custom/ft_memdel.c"
		"Core/LibFT/src/custom/ft_min.c"
		"Core/LibFT/src/custom/ft_overflow.c"
		"Core/LibFT/src/custom/ft_pow.c"
		"Core/LibFT/src/custom/ft_putchar.c"
		"Core/LibFT/src/custom/ft_putendl.c"
		"Core/LibFT/src/custom/ft_putnbr.c"
		"Core/LibFT/src/custom/ft_putstr.c"
		"Core/LibFT/src/custom/ft_round.c"
		"Core/LibFT/src/custom/ft_strcat.c"
		"Core/LibFT/src/custom/ft_strclr.c"
		"Core/LibFT/src/custom/ft_strcmp.c"
		"Core/LibFT/src/custom/ft_strcpy.c"
		"Core/LibFT/src/custom/ft_strdel.c"
		"Core/LibFT/src/custom/ft_strequ.c"
		"Core/LibFT/src/custom/ft_striter.c"
		"Core/LibFT/src/custom/ft_strmap.c"
		"Core/LibFT/src/custom/ft_strncat.c"
		"Core/LibFT/src/custom/ft_strncpy.c"
		"Core/LibFT/src/custom/ft_strnequ.c"
		"Core/LibFT/src/custom/ft_strnew.c"
		"Core/LibFT/src/custom/ft_strstr.c"
		"Core/LibFT/src/other/printf/ft_printf.c"
		"Core/LibFT/src/other/printf/ft_print_char.c"
		"Core/LibFT/src/other/printf/ft_print_hex.c"
		"Core/LibFT/src/other/printf/ft_print_num.c"
		"Core/LibFT/src/other/printf/ft_print_num_base.c"
		"Core/LibFT/src/other/printf/ft_print_num_unsigned.c"
		"Core/LibFT/src/other/printf/ft_print_ptr.c"
		"Core/LibFT/src/other/printf/ft_print_str.c"
		Core/LibFT/src/custom/ft_atoi_base.c
)

add_library(PrintF
		"Core/PrintF/src/ft_printf.c"
		"Core/PrintF/src/ft_print_char.c"
		"Core/PrintF/src/ft_print_hex.c"
		"Core/PrintF/src/ft_print_num.c"
		"Core/PrintF/src/ft_print_num_base.c"
		"Core/PrintF/src/ft_print_num_unsigned.c"
		"Core/PrintF/src/ft_print_ptr.c"
		"Core/PrintF/src/ft_print_str.c"
)

add_library(GetNextLine
		"Core/GetNextLine/get_next_line.c"
		"Core/GetNextLine/get_next_line.h"
		"Core/GetNextLine/get_next_line_utils.c"
		"Core/GetNextLine/get_next_line_bonus.c"
		"Core/GetNextLine/get_next_line_bonus.h"
		"Core/GetNextLine/get_next_line_utils_bonus.c"
)

add_executable(MiniTalk
		"Core/MiniTalk/src/client.c"
		"Core/MiniTalk/src/server.c"
		"Core/MiniTalk/include/minitalk.h"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_char.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_hex.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_num.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_num_base.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_num_unsigned.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_ptr.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_str.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_printf.c"
)

add_executable(PushSwap
		"Core/PushSwap/include/push_swap.h"
		"Core/PushSwap/src/main/main.c"
		"Core/PushSwap/src/stack/ft_stack_free.c"
		"Core/PushSwap/src/main/push_swap.c"
		"Core/PushSwap/src/handler/ft_handle_error.c"
		"Core/PushSwap/src/stack/ft_stack_new.c"
		"Core/PushSwap/src/stack/ft_stack_add_back.c"
		"Core/PushSwap/src/stack/ft_stack_last.c"
		"Core/PushSwap/src/stack/ft_stack_check_duplicate.c"
		"Core/PushSwap/src/stack/ft_stack_check_sort.c"
		"Core/PushSwap/src/algo/ft_algo_ra.c"
		"Core/PushSwap/src/stack/ft_stack_sort.c"
		"Core/PushSwap/src/algo/ft_algo_sa.c"
		"Core/PushSwap/src/stack/ft_stack_size.c"
		"Core/PushSwap/src/stack/ft_stack_min.c"
		"Core/PushSwap/src/stack/ft_stack_max.c"
		"Core/PushSwap/src/algo/ft_algo_pb.c"
		"Core/PushSwap/src/stack/ft_stack_index.c"
		"Core/PushSwap/src/algo/ft_algo_rra.c"
		"Core/PushSwap/src/algo/ft_algo_rotate.c"
		"Core/PushSwap/src/util/ft_util_check_ab.c"
		"Core/PushSwap/src/util/ft_util_check_ba.c"
		"Core/PushSwap/src/stack/ft_stack_place.c"
		"Core/PushSwap/src/algo/ft_algo_rotate_push.c"
		"Core/PushSwap/src/algo/ft_algo_rr.c"
		"Core/PushSwap/src/algo/ft_algo_rb.c"
		"Core/PushSwap/src/algo/ft_algo_pa.c"
		"Core/PushSwap/src/algo/ft_algo_rrr.c"
		"Core/PushSwap/src/algo/ft_algo_rrb.c"
		"Core/PushSwap/src/algo/ft_algo_sb.c"
		"Core/PushSwap/src/stack/ft_stack_sort_mini.c"
		"Core/PushSwap/src/algo/ft_algo_ss.c"
		"Core/PushSwap/src/main/ft_atoi_check_valid.c"
)

add_executable(SoLong
		"Core/SoLong/src/main/main.c"
		"Core/SoLong/include/so_long.h"
		"Core/SoLong/src/error/ft_throw_error.c"
		"Core/SoLong/include/errortype.h"
		"Core/SoLong/src/init/ft_init_mlx.c"
		"Core/SoLong/src/init/ft_init_hooks.c"
		"Core/SoLong/src/event/ft_event_keypress.c"
		"Core/SoLong/src/event/ft_event_close.c"
		"Core/SoLong/src/init/ft_init_map.c"
		"Core/SoLong/src/init/ft_init_map.c"
		"Core/SoLong/src/init/ft_init_data.c"
		"Core/SoLong/src/graphics/ft_gfx_render.c"
		"Core/SoLong/src/init/ft_init_graphics.c"
		"Core/SoLong/src/event/ft_event_window.c"
		"Core/SoLong/src/init/ft_init_player.c"
		"Core/SoLong/src/event/ft_event_move.c"
		"Core/SoLong/src/util/ft_util_map.c"
		"Core/SoLong/src/init/ft_init_map_check.c"
)

add_executable(Pipex
		"Core/Pipex/src/main/main.c"
		"Core/Pipex/src/error/ft_throw_error.c"
		"Core/Pipex/include/errortype.h"
		"Core/Pipex/include/pipex.h"
		"Core/Pipex/src/process/ft_process_child.c"
		"Core/Pipex/src/process/ft_process_parent.c"
		"Core/Pipex/src/process/ft_process_execute.c"
)

add_executable(Fractol
		"Core/Fractol/src/main/main.c"
		"Core/Fractol/src/error/ft_throw_error.c"
		"Core/Fractol/include/fractol.h"
		"Core/Fractol/src/init/ft_init_engine.c"
		"Core/Fractol/src/graphics/ft_gfx_render.c"
		"Core/Fractol/src/init/ft_init_hooks.c"
		"Core/Fractol/src/event/ft_event_close.c"
		"Core/Fractol/src/event/ft_event_keypress.c"
		"Core/Fractol/src/event/ft_event_mousemove.c"
		"Core/Fractol/src/event/ft_event_mousekey.c"
		"Core/Fractol/include/keys.h"
		"Core/Fractol/src/graphics/ft_gfx_engine.c"
		Core/Fractol/src/graphics/ft_gfx_fractal.c
)
add_executable(FdF
		"Core/FdF/src/main/main.c"
		"Core/FdF/include/errortype.h"
		"Core/FdF/include/fdf.h"
		"Core/FdF/src/init/ft_init_data.c"
		"Core/FdF/src/init/ft_init_map.c"
		"Core/FdF/src/init/ft_init_mlx.c"
		"Core/FdF/src/init/ft_init_hooks.c"
		"Core/FdF/src/graphics/ft_gfx_render.c"
		"Core/FdF/src/event/ft_event_close.c"
		"Core/FdF/src/event/ft_event_keypress.c"
		"Core/FdF/src/util/ft_util_free.c"
		"Core/FdF/include/fdf.h"
		"Core/FdF/src/util/ft_util_parse.c"
		"Core/FdF/src/error/ft_error_throw.c"
		Core/FdF/src/util/ft_util_str.c
)
