cmake_minimum_required(VERSION 3.13)  # CMake version check
project(school_42)                    # Create project "simple_example"
set(CMAKE_CXX_STANDARD 14)            # Enable c++14 standard

# Add executable target with source files listed in SOURCE_FILES variable

add_library(LibFT
		"Core/LibFT/src/base/ft_atoi.c"
		"Core/LibFT/src/base/ft_bzero.c"
		"Core/LibFT/src/base/ft_calloc.c"
		"Core/LibFT/src/base/ft_isalpha.c"
		"Core/LibFT/src/base/ft_isalnum.c"
		"Core/LibFT/src/base/ft_isascii.c"
		"Core/LibFT/src/base/ft_isdigit.c"
		"Core/LibFT/src/base/ft_isprint.c"
		"Core/LibFT/src/base/ft_itoa.c"
		"Core/LibFT/src/base/ft_memchr.c"
		"Core/LibFT/src/base/ft_memcmp.c"
		"Core/LibFT/src/base/ft_memcpy.c"
		"Core/LibFT/src/base/ft_memmove.c"
		"Core/LibFT/src/base/ft_memset.c"
		"Core/LibFT/src/base/ft_putchar_fd.c"
		"Core/LibFT/src/base/ft_putstr_fd.c"
		"Core/LibFT/src/base/ft_putnbr_fd.c"
		"Core/LibFT/src/base/ft_putendl_fd.c"
		"Core/LibFT/src/base/ft_split.c"
		"Core/LibFT/src/base/ft_strchr.c"
		"Core/LibFT/src/base/ft_strdup.c"
		"Core/LibFT/src/base/ft_striteri.c"
		"Core/LibFT/src/base/ft_strjoin.c"
		"Core/LibFT/src/base/ft_strlcat.c"
		"Core/LibFT/src/base/ft_strlcpy.c"
		"Core/LibFT/src/base/ft_strlen.c"
		"Core/LibFT/src/base/ft_strmapi.c"
		"Core/LibFT/src/base/ft_strncmp.c"
		"Core/LibFT/src/base/ft_strnstr.c"
		"Core/LibFT/src/base/ft_strrchr.c"
		"Core/LibFT/src/base/ft_strtrim.c"
		"Core/LibFT/src/base/ft_substr.c"
		"Core/LibFT/src/base/ft_tolower.c"
		"Core/LibFT/src/base/ft_toupper.c"
		"Core/LibFT/src/bonus/ft_lstadd_back_bonus.c"
		"Core/LibFT/src/bonus/ft_lstadd_front_bonus.c"
		"Core/LibFT/src/bonus/ft_lstclear_bonus.c"
		"Core/LibFT/src/bonus/ft_lstdelone_bonus.c"
		"Core/LibFT/src/bonus/ft_lstiter_bonus.c"
		"Core/LibFT/src/bonus/ft_lstlast_bonus.c"
		"Core/LibFT/src/bonus/ft_lstmap_bonus.c"
		"Core/LibFT/src/bonus/ft_lstnew_bonus.c"
		"Core/LibFT/src/bonus/ft_lstsize_bonus.c"
		"Core/LibFT/src/custom/ft_ceil.c"
		"Core/LibFT/src/custom/ft_factorial.c"
		"Core/LibFT/src/custom/ft_floor.c"
		"Core/LibFT/src/custom/ft_hashclear.c"
		"Core/LibFT/src/custom/ft_hashcode.c"
		"Core/LibFT/src/custom/ft_hashdel.c"
		"Core/LibFT/src/custom/ft_hashinsert.c"
		"Core/LibFT/src/custom/ft_hashnew.c"
		"Core/LibFT/src/custom/ft_hashsearch.c"
		"Core/LibFT/src/custom/ft_isblank.c"
		"Core/LibFT/src/custom/ft_isspace.c"
		"Core/LibFT/src/custom/ft_max.c"
		"Core/LibFT/src/custom/ft_memccpy.c"
		"Core/LibFT/src/custom/ft_memdel.c"
		"Core/LibFT/src/custom/ft_min.c"
		"Core/LibFT/src/custom/ft_overflow.c"
		"Core/LibFT/src/custom/ft_pow.c"
		"Core/LibFT/src/custom/ft_putchar.c"
		"Core/LibFT/src/custom/ft_putendl.c"
		"Core/LibFT/src/custom/ft_putnbr.c"
		"Core/LibFT/src/custom/ft_putstr.c"
		"Core/LibFT/src/custom/ft_round.c"
		"Core/LibFT/src/custom/ft_strcat.c"
		"Core/LibFT/src/custom/ft_strclr.c"
		"Core/LibFT/src/custom/ft_strcmp.c"
		"Core/LibFT/src/custom/ft_strcpy.c"
		"Core/LibFT/src/custom/ft_strdel.c"
		"Core/LibFT/src/custom/ft_strequ.c"
		"Core/LibFT/src/custom/ft_striter.c"
		"Core/LibFT/src/custom/ft_strmap.c"
		"Core/LibFT/src/custom/ft_strncat.c"
		"Core/LibFT/src/custom/ft_strncpy.c"
		"Core/LibFT/src/custom/ft_strnequ.c"
		"Core/LibFT/src/custom/ft_strnew.c"
		"Core/LibFT/src/custom/ft_strstr.c"
		"Core/LibFT/src/other/printf/ft_printf.c"
		"Core/LibFT/src/other/printf/ft_print_char.c"
		"Core/LibFT/src/other/printf/ft_print_hex.c"
		"Core/LibFT/src/other/printf/ft_print_num.c"
		"Core/LibFT/src/other/printf/ft_print_num_base.c"
		"Core/LibFT/src/other/printf/ft_print_num_unsigned.c"
		"Core/LibFT/src/other/printf/ft_print_ptr.c"
		"Core/LibFT/src/other/printf/ft_print_str.c"
		Core/LibFT/src/custom/ft_atoi_base.c
		Core/LibFT/src/custom/ft_atol.c
)

add_library(GGCollect
		"Custom/GGCollect/include/ggcollect.h"
		"Custom/GGCollect/src/ggcollect.c"
		Custom/GGCollect/src/main.c
)

add_library(PrintF
		"Core/PrintF/src/ft_printf.c"
		"Core/PrintF/src/ft_print_char.c"
		"Core/PrintF/src/ft_print_hex.c"
		"Core/PrintF/src/ft_print_num.c"
		"Core/PrintF/src/ft_print_num_base.c"
		"Core/PrintF/src/ft_print_num_unsigned.c"
		"Core/PrintF/src/ft_print_ptr.c"
		"Core/PrintF/src/ft_print_str.c"
)

add_library(GetNextLine
		"Core/GetNextLine/get_next_line.c"
		"Core/GetNextLine/get_next_line.h"
		"Core/GetNextLine/get_next_line_utils.c"
		"Core/GetNextLine/get_next_line_bonus.c"
		"Core/GetNextLine/get_next_line_bonus.h"
		"Core/GetNextLine/get_next_line_utils_bonus.c"
)

add_executable(MiniTalk
		"Core/MiniTalk/src/client.c"
		"Core/MiniTalk/src/server.c"
		"Core/MiniTalk/include/minitalk.h"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_char.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_hex.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_num.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_num_base.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_num_unsigned.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_ptr.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_print_str.c"
		"Core/MiniTalk/lib/libft/src/other/printf/ft_printf.c"
)

add_executable(PushSwap
		"Core/PushSwap/include/push_swap.h"
		"Core/PushSwap/src/main/main.c"
		"Core/PushSwap/src/stack/ft_stack_free.c"
		"Core/PushSwap/src/main/push_swap.c"
		"Core/PushSwap/src/handler/ft_handle_error.c"
		"Core/PushSwap/src/stack/ft_stack_new.c"
		"Core/PushSwap/src/stack/ft_stack_add_back.c"
		"Core/PushSwap/src/stack/ft_stack_last.c"
		"Core/PushSwap/src/stack/ft_stack_check_duplicate.c"
		"Core/PushSwap/src/stack/ft_stack_check_sort.c"
		"Core/PushSwap/src/algo/ft_algo_ra.c"
		"Core/PushSwap/src/stack/ft_stack_sort.c"
		"Core/PushSwap/src/algo/ft_algo_sa.c"
		"Core/PushSwap/src/stack/ft_stack_size.c"
		"Core/PushSwap/src/stack/ft_stack_min.c"
		"Core/PushSwap/src/stack/ft_stack_max.c"
		"Core/PushSwap/src/algo/ft_algo_pb.c"
		"Core/PushSwap/src/stack/ft_stack_index.c"
		"Core/PushSwap/src/algo/ft_algo_rra.c"
		"Core/PushSwap/src/algo/ft_algo_rotate.c"
		"Core/PushSwap/src/util/ft_util_check_ab.c"
		"Core/PushSwap/src/util/ft_util_check_ba.c"
		"Core/PushSwap/src/stack/ft_stack_place.c"
		"Core/PushSwap/src/algo/ft_algo_rotate_push.c"
		"Core/PushSwap/src/algo/ft_algo_rr.c"
		"Core/PushSwap/src/algo/ft_algo_rb.c"
		"Core/PushSwap/src/algo/ft_algo_pa.c"
		"Core/PushSwap/src/algo/ft_algo_rrr.c"
		"Core/PushSwap/src/algo/ft_algo_rrb.c"
		"Core/PushSwap/src/algo/ft_algo_sb.c"
		"Core/PushSwap/src/stack/ft_stack_sort_mini.c"
		"Core/PushSwap/src/algo/ft_algo_ss.c"
		"Core/PushSwap/src/main/ft_atoi_check_valid.c"
)

add_executable(SoLong
		"Core/SoLong/src/main/main.c"
		"Core/SoLong/include/so_long.h"
		"Core/SoLong/src/error/ft_throw_error.c"
		"Core/SoLong/include/errortype.h"
		"Core/SoLong/src/init/ft_init_mlx.c"
		"Core/SoLong/src/init/ft_init_hooks.c"
		"Core/SoLong/src/event/ft_event_keypress.c"
		"Core/SoLong/src/event/ft_event_close.c"
		"Core/SoLong/src/init/ft_init_map.c"
		"Core/SoLong/src/init/ft_init_map.c"
		"Core/SoLong/src/init/ft_init_data.c"
		"Core/SoLong/src/graphics/ft_gfx_render.c"
		"Core/SoLong/src/init/ft_init_graphics.c"
		"Core/SoLong/src/event/ft_event_window.c"
		"Core/SoLong/src/init/ft_init_player.c"
		"Core/SoLong/src/event/ft_event_move.c"
		"Core/SoLong/src/util/ft_util_map.c"
		"Core/SoLong/src/init/ft_init_map_check.c"
)

add_executable(Pipex
		"Core/Pipex/src/main/main.c"
		"Core/Pipex/src/error/ft_throw_error.c"
		"Core/Pipex/include/errortype.h"
		"Core/Pipex/include/pipex.h"
		"Core/Pipex/src/process/ft_process_child.c"
		"Core/Pipex/src/process/ft_process_parent.c"
		"Core/Pipex/src/process/ft_process_execute.c"
)

add_executable(Fractol
		"Core/Fractol/src/main/main.c"
		"Core/Fractol/src/error/ft_throw_error.c"
		"Core/Fractol/include/fractol.h"
		"Core/Fractol/src/init/ft_init_engine.c"
		"Core/Fractol/src/graphics/ft_gfx_render.c"
		"Core/Fractol/src/init/ft_init_hooks.c"
		"Core/Fractol/src/event/ft_event_close.c"
		"Core/Fractol/src/event/ft_event_keypress.c"
		"Core/Fractol/src/event/ft_event_mousemove.c"
		"Core/Fractol/src/event/ft_event_mousekey.c"
		"Core/Fractol/include/keys.h"
		"Core/Fractol/src/graphics/ft_gfx_engine.c"
		"Core/Fractol/src/graphics/ft_gfx_fractal.c"
)
add_executable(FdF
		"Core/FdF/src/main/main.c"
		"Core/FdF/src/init/ft_init_map.c"
		"Core/FdF/src/error/ft_throw_error.c"
		"Core/FdF/src/init/ft_init_data.c"
		"Core/FdF/src/graphics/ft_graphics_draw.c"
		"Core/FdF/src/init/ft_init_camera.c"
		"Core/FdF/src/init/ft_init_hooks.c"
		"Core/FdF/include/color.h"
		"Core/FdF/src/event/ft_event_key_press.c"
		"Core/FdF/src/event/ft_event_close.c"
		"Core/FdF/src/event/ft_event_mouse_press.c"
		"Core/FdF/src/event/ft_event_mouse_release.c"
		"Core/FdF/src/event/ft_event_mouse_move.c"
		"Core/FdF/src/util/ft_util_stack_to_arrays.c"
		"Core/FdF/src/util/ft_util_stack.c"
		"Core/FdF/src/util/ft_util_map.c"
		"Core/FdF/include/errortype.h"
		"Core/FdF/include/fdf.h"
		"Core/FdF/include/keys.h"
		"Core/FdF/src/graphics/ft_graphics_project.c"
		"Core/FdF/src/init/ft_init_point.c"
		"Core/FdF/src/util/ft_util_array.c"
		"Core/FdF/src/util/ft_util_color.c"
		"Core/FdF/src/graphics/ft_graphics_menu.c"
		"Core/FdF/src/util/ft_util.c"
		"Core/FdF/src/util/ft_util_controls.c"
		"Core/FdF/src/util/ft_util_gnl.c"
		"Core/FdF/src/util/ft_util_split.c"
)

add_executable(Philosophers
		"Core/Philosophers/philo/src/main/main.c"
		"Core/Philosophers/philo/include/philosophers.h"
		"Core/Philosophers/philo/src/error/ft_throw_error.c"
		"Core/Philosophers/philo/include/errortype.h"
		"Core/Philosophers/philo/src/util/ft_util_atoi.c"
		"Core/Philosophers/philo/src/init/ft_init_data.c"
		"Core/Philosophers/philo/src/util/ft_util_str.c"
		"Core/Philosophers/philo/src/util/ft_util_validate.c"
		"Core/Philosophers/philo/src/thread/ft_thread_philosopher.c"
		"Core/Philosophers/philo/src/util/ft_util_time.c"
		"Core/Philosophers/philo/src/util/ft_util_philosopher.c"
		"Core/Philosophers/philo/src/init/ft_init_thread.c"
		"Core/Philosophers/philo/src/util/ft_util_free.c"
		"Core/Philosophers/philo/src/init/ft_init_monitoring.c"
)

add_executable(MiniShell
		"Core/MiniShell/src/main/main.c"
		"Core/MiniShell/include/minishell.h"
		"Core/MiniShell/include/errortype.h"
		"Core/MiniShell/include/bool.h"
		"Core/MiniShell/src/init/ft_init_main.c"
		"Core/MiniShell/src/parse/ft_parse_env.c"
		"Core/MiniShell/src/error/ft_error_throw.c"
		"Core/MiniShell/src/error/ft_error_check.c"
		"Core/MiniShell/src/util/ft_util_env.c"
		"Core/MiniShell/src/util/ft_util_banner.c"
		"Core/MiniShell/src/exit/ft_exit_main.c"
		"Core/MiniShell/src/init/ft_init_shell.c"
		"Core/MiniShell/include/status.h"
		"Core/MiniShell/src/signal/ft_signal.c"
		"Core/MiniShell/src/cmd/exit/ft_cmd_exit.c"
  		"Core/MiniShell/src/cmd/export/ft_cmd_export.c"
		"Core/MiniShell/src/cmd/unset/ft_cmd_unset.c"
		"Core/MiniShell/src/cmd/env/ft_cmd_env.c"
		"Core/MiniShell/src/cmd/pwd/ft_cmd_pwd.c"
		"Core/MiniShell/src/cmd/echo/ft_cmd_echo.c"
		"Core/MiniShell/src/cmd/cd/ft_cmd_cd.c"
		"Core/MiniShell/src/parse/ft_parse_input.c"
		"Core/MiniShell/src/signal/ft_signal_add.c"
		"Core/MiniShell/src/util/ft_util_str.c"
		"Core/MiniShell/src/init/ft_init_quote.c"
		"Core/MiniShell/src/util/ft_util_quote.c"
		"Core/MiniShell/src/util/ft_util_quote2.c"
		"Core/MiniShell/src/util/ft_util_redirect.c"
		"Core/MiniShell/src/util/ft_util_redirect2.c"
		"Core/MiniShell/src/util/ft_util_redirect3.c"
		"Core/MiniShell/include/redirect.h"
		"Core/MiniShell/include/token.h"
		"Core/MiniShell/src/util/ft_util_num.c"
		"Core/MiniShell/src/run/ft_run_cmd.c"
		"Core/MiniShell/src/run/ft_run_bin.c"
		"Core/MiniShell/src/run/ft_run_defined.c"
		"Core/MiniShell/src/parse/ft_parse_handle.c"
		"Core/MiniShell/src/run/ft_run_token.c"
		"Core/MiniShell/src/util/ft_util_token.c"
		"Core/MiniShell/src/init/ft_init_parse.c"
		"Core/MiniShell/src/util/ft_util_token_2.c"
		"Core/MiniShell/src/init/ft_init_token.c"
		"Core/MiniShell/src/util/ft_util_token_3.c"
		"Core/MiniShell/src/util/ft_util_envcase.c"
		"Core/MiniShell/src/util/ft_util_token_4.c"
		"Core/MiniShell/src/util/ft_util_cmd.c"
		"Core/MiniShell/src/util/ft_util_cmd_2.c"
		"Core/MiniShell/src/util/ft_util_cmd_3.c"
		"Core/MiniShell/src/parse/ft_parse_dollar.c"
		"Core/MiniShell/src/util/ft_util_env_2.c"
		"Core/MiniShell/src/cmd/nya/ft_cmd_nya.c"
		"Core/MiniShell/src/util/ft_util_prompt.c"
		"Core/MiniShell/src/util/ft_util_bin.c"
		"Core/MiniShell/src/util/ft_util_bin_2.c"
		"Core/MiniShell/src/util/ft_util_env_3.c"
		"Core/MiniShell/src/util/ft_util_bin.c"
		"Core/MiniShell/src/run/ft_run_bin_2.c"
		"Core/MiniShell/src/parse/ft_parse_handle_2.c"
		"Core/MiniShell/src/parse/ft_parse_handle_3.c"
		"Core/MiniShell/src/parse/ft_parse_handle_4.c"
		"Core/MiniShell/src/parse/ft_parse_handle_5.c"
)

add_executable(MiniRT
		"Core/MiniRT/src/main/main.c"
		"Core/MiniRT/src/create/create_scene.c"
		"Core/MiniRT/include/minirt.h"
		"Core/MiniRT/src/render/calculate_lighting.c"
		"Core/MiniRT/src/render/generate_ray.c"
		"Core/MiniRT/src/render/render.c"
		"Core/MiniRT/src/render/trace_ray.c"
		"Core/MiniRT/src/object/object_cylinder.c"
		"Core/MiniRT/src/object/intersect.c"
		"Core/MiniRT/src/object/plane.c"
		"Core/MiniRT/src/object/sphere.c"
		"Core/MiniRT/src/util/add_color.c"
		"Core/MiniRT/src/util/color_scale.c"
		"Core/MiniRT/src/util/vec.c"
		"Core/MiniRT/src/util/vec_add.c"
		"Core/MiniRT/src/util/vec_add_value.c"
		"Core/MiniRT/src/util/vec_cross.c"
		"Core/MiniRT/src/util/vec_div.c"
		"Core/MiniRT/src/util/vec_dot.c"
		"Core/MiniRT/src/util/vec_len.c"
		"Core/MiniRT/src/util/vec_mul.c"
		"Core/MiniRT/src/util/vec_normalize.c"
		"Core/MiniRT/src/util/vec_sub.c"
		"Core/MiniRT/src/init/init_parse.c"
		"Core/MiniRT/src/error/error_throw.c"
		"Core/MiniRT/src/parse/parse_ambient.c"
		"Core/MiniRT/src/util/util_num.c"
		"Core/MiniRT/src/util/util_color.c"
		"Core/MiniRT/src/util/util_array.c"
		"Core/MiniRT/src/parse/parse_spotlight.c"
		"Core/MiniRT/src/parse/parse_camera.c"
		"Core/MiniRT/src/parse/parse_sphere.c"
		"Core/MiniRT/src/parse/parse_cylinder.c"
		"Core/MiniRT/src/parse/parse_plane.c"
		"Core/MiniRT/src/util/util_vector.c"
		"Core/MiniRT/src/init/init_mlx.c"
		"Core/MiniRT/src/exit/exit_mlx.c"
		"Core/MiniRT/src/init/init_hook.c"
		"Core/MiniRT/src/event/event_keypress.c"
		"Core/MiniRT/src/util/util_camera.c"
		"Core/MiniRT/src/exit/exit_data.c"
		"Core/MiniRT/src/init/init_data.c"
		Core/MiniRT/src/object/object_cylinder_2.c
		Core/MiniRT/src/object/object_cylinder_3.c
)

add_executable(CPP-00-EX00
		"Core/CPP/Module-00/ex00/src/megaphone.cpp"
)
add_executable(CPP-00-EX01
		"Core/CPP/Module-00/ex01/src/PhoneBook.cpp"
		"Core/CPP/Module-00/ex01/include/PhoneBook.h"
		"Core/CPP/Module-00/ex01/src/Contact.cpp"
		"Core/CPP/Module-00/ex01/include/Contact.h"
		"Core/CPP/Module-00/ex01/src/main.cpp"
)
add_executable(CPP-00-EX02
		"Core/CPP/Module-00/ex02/include/Account.hpp"
		"Core/CPP/Module-00/ex02/src/tests.cpp"
		"Core/CPP/Module-00/ex02/src/Account.cpp"
)
add_executable(CPP-01-EX00
		"Core/CPP/Module-01/ex00/src/Zombie.cpp"
		"Core/CPP/Module-01/ex00/include/Zombie.h"
		"Core/CPP/Module-01/ex00/src/newZombie.cpp"
		"Core/CPP/Module-01/ex00/src/randomChump.cpp"
		"Core/CPP/Module-01/ex00/src/main.cpp"
)

add_executable(CPP-01-EX01
		"Core/CPP/Module-01/ex01/include/Zombie.h"
		"Core/CPP/Module-01/ex01/src/main.cpp"
		"Core/CPP/Module-01/ex01/src/Zombie.cpp"
		"Core/CPP/Module-01/ex01/src/zombieHorde.cpp"
)

add_executable(CPP-01-EX02
		"Core/CPP/Module-01/ex02/src/main.cpp"
)

add_executable(CPP-01-EX03
		"Core/CPP/Module-01/ex03/src/main.cpp"
		Core/CPP/Module-01/ex03/src/main.cpp
		Core/CPP/Module-01/ex03/src/Weapon.cpp
		Core/CPP/Module-01/ex03/include/Weapon.h
		Core/CPP/Module-01/ex03/src/HumanA.cpp
		Core/CPP/Module-01/ex03/include/HumanA.h
		Core/CPP/Module-01/ex03/src/HumanB.cpp
		Core/CPP/Module-01/ex03/include/HumanB.h
)

add_executable(CPP-01-EX04 Core/CPP/Module-01/ex04/src/main.cpp)

add_executable(CPP-01-EX05
		Core/CPP/Module-01/ex05/src/Harl.cpp
		Core/CPP/Module-01/ex05/include/Harl.h
		Core/CPP/Module-01/ex05/src/main.cpp
)

add_executable(CPP-01-EX06
		Core/CPP/Module-01/ex06/src/Harl.cpp
		Core/CPP/Module-01/ex06/include/Harl.h
		Core/CPP/Module-01/ex06/src/main.cpp
)

add_executable(CPP-02-EX00
		Core/CPP/Module-02/ex00/src/Fixed.cpp
		Core/CPP/Module-02/ex00/include/Fixed.h
		Core/CPP/Module-02/ex00/src/main.cpp
)

add_executable(CPP-02-EX01
		Core/CPP/Module-02/ex01/src/Fixed.cpp
		Core/CPP/Module-02/ex01/include/Fixed.h
		Core/CPP/Module-02/ex01/src/main.cpp
)

add_executable(CPP-02-EX02
		Core/CPP/Module-02/ex02/src/Fixed.cpp
		Core/CPP/Module-02/ex02/include/Fixed.h
		Core/CPP/Module-02/ex02/src/main.cpp
)

add_executable(CPP-02-EX03
		"Core/CPP/Module-02/ex03/src/Fixed.cpp"
		"Core/CPP/Module-02/ex03/include/Fixed.h"
		"Core/CPP/Module-02/ex03/src/main.cpp"
		"Core/CPP/Module-02/ex03/src/Point.cpp"
		"Core/CPP/Module-02/ex03/include/Point.h"
		"Core/CPP/Module-02/ex03/src/bsp.cpp"
)
add_executable(CPP-03-EX00
		"Core/CPP/Module-03/ex00/src/main.cpp"
		"Core/CPP/Module-03/ex00/src/ClapTrap.cpp"
		"Core/CPP/Module-03/ex00/include/ClapTrap.h"
)

add_executable(CPP-03-EX01
		"Core/CPP/Module-03/ex01/src/ScavTrap.cpp"
		"Core/CPP/Module-03/ex01/include/ScavTrap.h"
		"Core/CPP/Module-03/ex01/include/ClapTrap.h"
		"Core/CPP/Module-03/ex01/src/ClapTrap.cpp"
		"Core/CPP/Module-03/ex01/src/main.cpp"
)

add_executable(CPP-03-EX02
		"Core/CPP/Module-03/ex02/src/ScavTrap.cpp"
		"Core/CPP/Module-03/ex02/include/ScavTrap.h"
		"Core/CPP/Module-03/ex02/include/ClapTrap.h"
		"Core/CPP/Module-03/ex02/src/ClapTrap.cpp"
		"Core/CPP/Module-03/ex02/src/main.cpp"
		Core/CPP/Module-03/ex02/src/FragTrap.cpp
		Core/CPP/Module-03/ex02/include/FragTrap.h
)

add_executable(CPP-03-EX03
		"Core/CPP/Module-03/ex03/src/ScavTrap.cpp"
		"Core/CPP/Module-03/ex03/include/ScavTrap.h"
		"Core/CPP/Module-03/ex03/include/ClapTrap.h"
		"Core/CPP/Module-03/ex03/src/ClapTrap.cpp"
		"Core/CPP/Module-03/ex03/src/main.cpp"
		Core/CPP/Module-03/ex03/src/FragTrap.cpp
		Core/CPP/Module-03/ex03/include/FragTrap.h
		Core/CPP/Module-03/ex03/src/DiamondTrap.cpp
		Core/CPP/Module-03/ex03/include/DiamondTrap.h
)